build/hz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ifps-xporter-svc
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  - name: websocket
    port: 8000
    protocol: TCP
    targetPort: websocket
  selector:
    run: ifps-xporter
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
